// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Panels) ExpanderIcon renders component without exploding 1`] = `
.c0 {
  margin-left: 3px;
  margin-right: 3px;
  -webkit-transition: -webkit-transform 100ms ease;
  -webkit-transition: transform 100ms ease;
  transition: transform 100ms ease;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

<i
  class="md-icon material-icons c0"
/>
`;

exports[`(Panels) ExpanderIcon renders when collapsed 1`] = `
.c0 {
  margin-left: 3px;
  margin-right: 3px;
  -webkit-transition: -webkit-transform 100ms ease;
  -webkit-transition: transform 100ms ease;
  transition: transform 100ms ease;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

<i
  class="md-icon material-icons c0"
/>
`;

exports[`(Panels) ExpanderIcon renders when expanded 1`] = `
.c0 {
  margin-left: 3px;
  margin-right: 3px;
  -webkit-transition: -webkit-transform 100ms ease;
  -webkit-transition: transform 100ms ease;
  transition: transform 100ms ease;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

<i
  class="md-icon material-icons c0"
/>
`;
